--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -1,8 +1,8 @@
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table align=center border="0" cellspacing="0" cellpadding="0">
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
   <td width="6"  class="boxarttop">&nbsp;</td>
-  <td width="100%"  class="boxarttop"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
+  <td   class="boxarttop"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
   <td width="6" class="boxarttop">&nbsp;</td>
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
  </tr>
