--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -1,7 +1,7 @@
 <br>
 <HR>
 <DIV>
-<font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE> <a href=index.pl?logout=1>Log Out</a></font>
+<font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE> <a href=index.pl?logout=1 id=logout style="display:none">Log Out</a></font>
 </DIV>
 <font class = "small"><span style="color: red;">Warning:</span>  This site uses <a href="http://en.wikipedia.org/wiki/Ajax_(programming)">AJAX</a>.  Don't press your browser's back button!</font>
 <script type="text/javascript">
@@ -9,6 +9,12 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
+$(document).ready(function(){
+	var user = "<TMPL_VAR NAME=USER>";
+	if(user.match(/public/i)) {return;}
+	else {$('#logout').show(0);}
+});
+
 var pageTracker = _gat._getTracker("UA-3802985-2");
 pageTracker._initData();
 pageTracker._trackPageview();
